# video-code-extractor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-quality.yml  security.yml  tests.yml
docs/: architecture.md
src/vce/: __init__.py  bench.py  cli.py  codequality.py  cropping.py  dedup.py  frames.py  merge.py  pipeline.py  scoring.py  types.py
src/vce/backends/: __init__.py  base.py  macos_vision.py  paddle.py  vision.py
tests/: conftest.py  test_bench.py  test_cli.py  test_codequality.py  test_cropping.py  test_dedup.py  test_frames.py  test_macos_vision_backend.py  test_merge.py  test_paddle_backend.py  test_pipeline.py  test_scoring.py  test_smoke.py  test_vision_backend.py
tests/fixtures/bench/: snippet_a.txt  snippet_b.txt
tools/: download_lessons.py
