[project]
name = "video-code-extractor"
version = "0.1.0"
description = "Extract clean, provenance-tracked source code from programming-screencast videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
# PaddleOCR is heavy; keep it out of the base install and CI.
paddle = [
    "paddlepaddle>=2.6",
    "paddleocr>=2.7",
]

[project.scripts]
vce = "vce.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vce"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config"]
markers = [
    "paddle: tests that require the optional paddle extra (deselect with -m 'not paddle')",
    "slow: slow tests (deselect with -m 'not slow')",
]

[tool.coverage.run]
branch = true
source = ["vce"]

[tool.coverage.report]
show_missing = true

[tool.ty.environment]
root = ["src"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
